[package]
name = "ohos-drawing-sys"
version = "0.1.1"
edition = "2021"
description = "Bindings to the `native_drawing` API of OpenHarmony OS"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-sys"
keywords = ["OpenHarmony", "HarmonyOS", "ffi", "drawing"]
exclude = ["src/**/*_nopublish.rs"]

[dependencies]
document-features = { version = "0.2", optional = true }

[features]
default = ["api-10"]

#! ### OpenHarmony API level
#! This crate by default exposes bindings for API-level 10.
#! Optionally enable one of the `api-*` features to get access to bindings for newer
#! OpenHarmony versions.

## No effect. API-10 bindings can't be deselected. The feature exists for internal purposes.
api-10 = []
## Enables bindings for OpenHarmony API-level 11
api-11 = ["api-10"]
## **EXPERIMENTAL**: Enables bindings for OpenHarmony API-level 12 (beta-1).
## Will stabilize once the final version has been released.
api-12 = ["api-11"]
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true
