[package]
name = "hilog-sys"
version = "0.1.4"
edition = "2021"
keywords = ["OpenHarmony", "HarmonyOS", "hilog", "log"]
description = "Rust bindings to the HiLog logging system of OpenHarmony"
repository = "https://github.com/openharmony-rs/ohos-sys"
license = "Apache-2.0"

[dependencies]
document-features = { version = "0.2", optional = true }
log = { version = "0.4", optional = true}

[features]
default = ["api-10"]

#! ### `log` crate interop
## Adds `From` and `Into` conversion from `log` LogLevel to Hilogs log level.
log = ["dep:log"]

#! ### OpenHarmony API level
#! This crate by default exposes bindings for API-level 10.
#! Optionally enable one of the `api-*` features to get access to bindings for newer
#! OpenHarmony versions.

## No effect. API-10 bindings can't be deselected. The feature exists for internal purposes.
api-10 = []
## Enables bindings for OpenHarmony API-level 11
api-11 = ["api-10"]
## Enables bindings for OpenHarmony API-level 12 (No changes)
api-12 = ["api-11"]
## Enables bindings for OpenHarmony API-level 13 (No changes)
api-13 = ["api-12"]
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true