[package]
name = "ohos-huks-sys"
version = "0.1.0"
edition = "2021"
description = "Raw bindings to the Universal Keystore Kit (HUKS) of OpenHarmony"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-sys"
keywords = ["OpenHarmony", "HarmonyOS", "ffi", "huks", "keystore"]
readme = "README.md"

[dependencies]
document-features = { version = "0.2", optional = true }

[features]
default = []

## Enables bindings for OpenHarmony API-level 10. HUKS is first exposed in the NDK
## from API-level 9; this crate's minimum is API-10 to align with the rest of `ohos-sys`.
api-10 = []
## Enables bindings for OpenHarmony API-level 11.
##
## Adds `OH_HUKS_ERR_CODE_DEVICE_PASSWORD_UNSET` and key-purpose `OH_HUKS_KEY_PURPOSE_AGREE` flag refinements.
api-11 = ["api-10"]
## Enables bindings for OpenHarmony API-level 12.
##
## Adds `OH_HUKS_MODE_GCM` cipher-mode constant and additional parameter tags.
api-12 = ["api-11"]
## Enables bindings for OpenHarmony API-level 13 (No changes).
api-13 = ["api-12"]
## Enables bindings for OpenHarmony API-level 14 (No changes).
api-14 = ["api-13"]
## Enables bindings for OpenHarmony API-level 15 (No changes).
api-15 = ["api-14"]
## Enables bindings for OpenHarmony API-level 16 (No changes).
api-16 = ["api-15"]
## Enables bindings for OpenHarmony API-level 17 (No changes).
api-17 = ["api-16"]
## Enables bindings for OpenHarmony API-level 18.
##
## Adds SM2/SM3/SM4 algorithm constants and additional padding modes.
api-18 = ["api-17"]
## Enables bindings for OpenHarmony API-level 19 (No changes).
api-19 = ["api-18"]
## Enables bindings for OpenHarmony API-level 20.
##
## Adds `OH_Huks_WrapKey`, `OH_Huks_UnwrapKey`, and the `OH_HUKS_ERR_CODE_KEY_ALREADY_EXIST` error code.
api-20 = ["api-19"]
## Enables bindings for OpenHarmony API-level 21 (No changes).
api-21 = ["api-20"]
## Enables bindings for OpenHarmony API-level 22.
##
## Adds the `native_huks_external_crypto_api` and `native_huks_external_crypto_type` modules.
api-22 = ["api-21"]
## Enables bindings for OpenHarmony API-level 23 (No changes).
api-23 = ["api-22"]
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true
