[package]
name = "ohos-vsync-sys"
version = "0.1.3"
edition = "2021"
description = "Raw Bindings to the vsync (Vertical Synchroization) API of OpenHarmony"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-sys"
keywords = ["OpenHarmony", "HarmonyOS", "ffi", "vsync"]
readme = "README.md"

[dependencies]
document-features = { version = "0.2", optional = true }

[features]
default = []

api-10 = []
api-11 = ["api-10"]
api-12 = ["api-11"]
api-13 = ["api-12"]
## Enables API-14 bindings, including support for DVSync (Decoupled Vsync)
api-14 = ["api-13"]
api-15 = ["api-14"]
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true
