[package]
name = "arkweb-sys"
version = "0.1.0"
edition = "2021"
description = "Raw Bindings to the Web module of OpenHarmony"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-sys"
keywords = ["OpenHarmony", "HarmonyOS", "ffi", "web", "arkweb"]
readme = "Readme.md"

[dependencies]
document-features = { version = "0.2", optional = true }

[features]
default = []

## This is the minimum API-level required for Web.
api-11 = []
## Enables bindings for OpenHarmony API-level 12.
api-12 = ["api-11"]
## Enables bindings for OpenHarmony API-level 13 (No changes).
api-13 = ["api-12"]
## Enables bindings for OpenHarmony API-level 14 (No changes).
api-14 = ["api-13"]
## Enables bindings for OpenHarmony API-level 15 (No changes).
api-15 = ["api-14"]
## Enables bindings for OpenHarmony API-level 16 (No changes).
api-16 = ["api-15"]
## Enables bindings for OpenHarmony API-level 17 (No changes).
api-17 = ["api-16"]
## Enables bindings for OpenHarmony API-level 18.
api-18 = ["api-17"]
## Enables bindings for OpenHarmony API-level 19 (No changes).
api-19 = ["api-18"]
## Enables bindings for OpenHarmony API-level 20.
api-20 = ["api-19"]
## Enables bindings for OpenHarmony API-level 21 (No changes).
api-21 = ["api-20"]
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true
