[package]
name = "xcomponent-sys"
version = "0.3.3"
edition = "2021"
description = "Raw Bindings to the `xcomponent` API of OpenHarmony"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-sys"
keywords = ["OpenHarmony", "HarmonyOS", "ffi", "XComponent", "UI"]
exclude = ["src/xcomponent_api11.rs"]
readme = "README.md"

[dependencies]
document-features = { version = "0.2", optional = true }
keyboard-types = {version = "0.7.0", optional = true}
arkui-sys = { version = "0.3.0", path = "../arkui", optional = true}
ohos-sys-opaque-types = { workspace = true}

[features]
default = []

api-10 = []
api-11 = ["api-10"]
api-12 = ["api-11", "arkui-sys?/api-12"]
api-13 = ["api-12" ]
api-14 = ["api-13"]
api-15 = ["api-14"]
## Enables bindings for OpenHarmony API-level 16.
api-16 = ["api-15"]
## Enables bindings for OpenHarmony API-level 17.
api-17 = ["api-16"]
## Enables bindings for OpenHarmony API-level 18 (5.1.0).
api-18 = ["api-17"]
## Enables XComponent APIs that depend on ArkUI.
arkui = ["dep:arkui-sys"]
## Provides optional conversion from the OH keyboard enum to the keyboard-types enum.
keyboard-types = ["dep:keyboard-types"]
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true
